# ti-to-sigma-crew

./: README.md
purple_team_blue/: README.md  desktop.ini  final_sigma.yml  metadata.yml  pyproject.toml  requirements.txt  sigma.yml  sigma2.yml  sigma3.yml  sigma4.yml  sigma_robust_example2.yml  sigmav2.yml  threat_analysis_brief.md  threat_analysis_brief1.md  threat_analysis_brief2.md
purple_team_blue/db/: chroma.sqlite3
purple_team_blue/knowledge/: sigma_robust_example.yml
purple_team_blue/src/purple_team_blue/: crew.py  main.py  sigma_models.py
purple_team_blue/src/purple_team_blue/config/: agents.yaml  tasks.yaml
purple_team_blue/src/purple_team_blue/detections/: unc3944_ad_reconnaissance__known_tools_execution.yml  unc3944_ad_reconnaissance__native_commands.yml  unc3944_ad_reconnaissance__powershell_cmdlets.yml  unc3944_remote_access_tool__network_connection.yml  unc3944_remote_access_tool__process_execution.yml  unc3944_remote_access_tool__registry_run_key_persistence.yml  unc3944_remote_access_tool__service_creation.yml
purple_team_blue/src/purple_team_blue/tools/: custom_tools.py
