[project]
name = "purple_team_blue"
version = "0.1.0"
description = "purple_team_blue using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.0,<1.0.0"
]

[project.scripts]
purple_team_blue = "purple_team_blue.main:run"
run_crew = "purple_team_blue.main:run"
train = "purple_team_blue.main:train"
replay = "purple_team_blue.main:replay"
test = "purple_team_blue.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
